[project]
name = "pizza-tracker-tracker"
version = "0.1.0"
description = "Poll a large Canadian pizza chain's order tracker and send Pushover notifications on status changes"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.34.2",
]

[project.scripts]
pizza-tracker-tracker = "tracker:main"

[tool.uv]
package = true
